jsonschemadsl2ecore.trafo.opt/test/test09/validtests/example4.test9
{
	"job":{
		"role":"some role",
		"level":1
	}
}