jsonschemadsl2ecore.trafo.opt/test/test09/invalidtests/example6.test9
{
	"job":{
		"role":"some role",
		"level":1.3
	}
}